# stashtrend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  MEMORY.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  heatmap-design-brief.html
.claude/: settings.json
.claude/agents/: architect.md  changelog-scanner.md  code-reviewer.md  commit-drafter.md  debugger.md  docs-updater.md  engineer.md  explorer.md  frontend-designer.md  implementer.md  lint-fixer.md  loop-guard.md  packet-summarizer.md  playwright-qa.md  pm.md  pr-drafter.md  qa.md  researcher.md  security-scanner.md  staff-reviewer.md  test-triager.md
.claude/hooks/: edit-count-detector.sh  inline-edit-guard.sh  pipeline-gate.sh  pre-compact-reminder.sh  pre-push-gate.sh  validate-agent-type.sh
.desloppify/: query.json  review_packet_blind.json  state-cxx.json  state-cxx.json.bak  state-javascript.json  state-javascript.json.bak  state-python.json  state-python.json.bak
.desloppify/review_packets/: holistic_packet_20260302_145834.json  holistic_packet_20260302_152322.json  (+4 more)
.githooks/: pre-commit
backend/: Makefile  ai.py  app.py  db.py  requirements.txt  run_tests.sh  wsgi.py
docs/: architecture.md  backlog.md  conventions.md  gotchas.md  harness-improvements.md  mobile-budgets-design-overview.html
frontend/: Makefile  index.html  package-lock.json  package.json  run_tests.sh  vite.config.js
nginx/: nginx.conf
pipeline/: pyproject.toml
pipeline/monarch_pipeline/: auth.py  cli.py  config.py  fetchers.py  schema.py  storage.py
(+351 files in other folders)
